turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:22: error: not found: value L
		case L => gauche(); avance();
                     ^LangtonsAnt:23: error: not found: value R
		case R => droite(); avance();
                     ^